--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:watch": "nodemon app.js",
     "migrate": "sequelize db:migrate",
     "migrate:undo": "sequelize db:migrate:undo",
-    "start:worker": "node worker.js"
+    "worker": "node worker.js"
   },
   "author": "OCTO",
   "license": "ISC",
